2004-06-21  Jan Nieuwenhuizen  <janneke@gnu.org>

	* gtk/gdk-event.scm (gdk-event-button:button): New function.

2004-04-02  Andreas Rottmann  <a.rottmann@gmx.at>

	* gtk.scm (on-get-flags): Provide default implementation returning 0.

	* gobject.scm (gtype-instance:write): Typo fix: logor -> logior.

2004-03-26  Andreas Rottmann  <a.rottmann@gmx.at>

	* gobject.scm (gtype-class-define-signal): Use
	procedure->memoizing-macro instead of procedure->macro, which is
	deprecated.

2004-02-22  Andy Wingo  <wingo@pobox.com>

	* gobject.scm (make-gparam-instance): Make params (read write) by
	default.
	(make-gobject-instance): Allow keyword initargs that are defined
	via :init-keyword. Call the <object> initializer directly to set
	these. Somewhat hacky, but doesn't really break any rules.
	(scm->gvalue): Work with closures.

2004-02-21  Andy Wingo  <wingo@pobox.com>

	* gobject.scm (gtype-instance:write): If we get a GValue from
	somewhere else, the "primitive" code doesn't know how to make the
	class. So we have a new hacky method to accept a gtype as the arg
	and do the gtype->class in gobject.scm now.

2004-02-12  Andy Wingo  <wingo@pobox.com>

	* gobject.scm (scm->gvalue): Add a case for setting flags.
	(allocate-instance): Use gvalue-primitive-new for basic types.
	(gvalue->scm, scm->gvalue): Simplifications based on basic types.
	All over: adapt to primitives changes.

2004-02-08  Andy Wingo  <wingo@pobox.com>

	* gobject.scm: Removed most of the commentary. Instead, refer to
	the tutorial.
	(exports): No more genum->value-table. New functions
	genum-class->value-table, gflags-class->value-table. New function
	genum->value.
	(initialize for <gtype-class>): Allow subclassing of <genum> and
	<gflags> to create new GTypes. You must pass #:vtable as an
	initarg.
	(gtype-instance-primitive): New helper (private).
	(initialize for <gclosure>): Allow either parameters and return
	val to be either <gtype> or <gtype-class> instances. If no return